--- a/README.ipynb
+++ b/README.ipynb
@@ -7,7 +7,7 @@
     "This is an inline formula: $\\alpha + \\beta = \\gamma$\n",
     "\n",
     "$$\n",
-    "i\\hbar \\frac{\\partial}{\\partial t} \\Psi(x, t) = \\hat{H} \\Psi(x, t) \\lambda\n",
+    "i\\hbar \\frac{\\partial}{\\partial t} \\Psi(x, t) = \\hat{H} \\Psi(x, t) \\beta\n",
     "$$"
    ]
   }
