--- a/docs/documentation.ipynb
+++ b/docs/documentation.ipynb
@@ -164,8 +164,11 @@
       "id": "6c92eea0",
       "metadata": {},
       "source": [
-        "### Example 1\n",
-        "We start at $g=2$ and go down to the critical point $g_c=1$. We choose sine protocol:\n",
+        "## Example 1 | KZ power-law hypothesis\n",
+        "\n",
+        "The aim of the example is to demonstrate the power-law relationship between density of topological defects $d$ and the quench time $\\tau_Q$\n",
+        "\n",
+        "We prepare the systems of $L=100, 200, 300, 400, 500, 1000$ particles in the ground state at $g=2$ and ramp down the transverse field to the critical point $g_c=1$, following the sinusoidal protocole:\n",
         "\n",
         "$$g(t) =\n",
         "\\begin{cases}\n",
@@ -174,7 +177,9 @@
         "1, & \\text{if } \\frac{t}{\\tau_Q} > \\frac{\\pi}{2}\n",
         "\\end{cases}$$\n",
         "\n",
-        "Data for $L=100, 200, 300, 400, 500, 1000$ confirm power-law scaling."
+        "At the end of a quench, the density of excitations is measured.\n",
+        "\n",
+        "Data for $L=100, 200, 300, 400, 500, 1000$ is plotted below. For small quench times, we can see the saturation region. For slower quenches, we can clearly see the power-law dependence, where KZ exponent is found to be roughly $-0.63$ for $L=1000$, as predicted by KZ theory."
       ]
     },
     {
@@ -182,10 +187,10 @@
       "id": "90af0dfa",
       "metadata": {},
       "source": [
-        "## Results\n",
+        "### Example 1 | Results\n",
         "\n",
         "<p align=\"center\">\n",
-        "  <img src=\"../plots/KZ_scaling_plot.svg\" width=\"1000\">\n",
+        "  <img src=\"figures/KZ_scaling_plot.svg\" width=\"1000\">\n",
         "</p>"
       ]
     },
@@ -194,14 +199,14 @@
       "id": "b6adeb58",
       "metadata": {},
       "source": [
-        "### Example 2\n",
+        "### Inhomogeneous quench\n",
         "Dispersion relation for infinite 1D Ising model has the form:\n",
         "\n",
         "$$\\omega_k=2\\sqrt{(g-\\cos{k})^2+\\sin^2{k}}$$\n",
         "\n",
-        "one can expand it near the Fermi point at $k=0$ for small $k$:\n",
+        "one can expand it near the Fermi point at critical $g=1$ for small $k$:\n",
         "\n",
-        "$$\\omega_k \\approx 2k \\Rightarrow c=\\frac{\\mathrm{d} \\omega}{\\mathrm{d}k}=2$$\n",
+        "$$\\omega_k \\approx 2\\sqrt{\\left(g_c-1+k^2/2\\right)^2+k^2}\\approx 2k \\;\\Rightarrow \\; c=\\frac{\\mathrm{d} \\omega}{\\mathrm{d}k}=2$$\n",
         "\n",
         "we see that there is a characteristic velocity in the system. We can think of it as a maximal group velocity at which information can propagate.\n",
         "\n",
@@ -210,13 +215,33 @@
     },
     {
       "cell_type": "markdown",
+      "id": "5e290dbc",
+      "metadata": {},
+      "source": [
+        "## Example 2 | Shortcut to adiabaticity\n",
+        "\n",
+        "In this example we will compare the uniform quenches with the inhomogeneous ones, where the change in transverse field starts at the center of the system, and expands at a constant speed of $v$ to the ends of the chain. Here the inverse of $\\alpha$ parameter could be interpreted as the width of the ramp.\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "  <img src=\"figures/inhomo_ramp.svg\" width=\"1000\">\n",
+        "</p>\n",
+        "\n",
+        "As in the previous example, we choose a sinusoidal ramp, and perform time evolution from $g=2$ to the critical point. For inhomogeneous case, we replace:\n",
+        "\n",
+        "$$t/\\tau_Q \\rightarrow \\alpha\\left( vt/\\tau_{\\mathrm{total}}-n\\right), \\quad \\mathrm{where} \\quad \\tau_\\mathrm{total}=\\frac{\\pi}{\\alpha v} + \\frac{1}{v} \\frac{L-1}{2}$$\n",
+        "\n",
+        "Below are the results for the system of $L=1000$ particles. As expected, the excitations are suppressed for inhomogeneous quenches with cricical front velocity smaller than the speed of sound $v<c=2$:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "de05ded8",
       "metadata": {},
       "source": [
-        "## Results\n",
+        "### Example 2 | Results\n",
         "\n",
         "<p align=\"center\">\n",
-        "  <img src=\"../plots/inhomo_test_lin_plot_1000.svg\" width=\"1000\">\n",
+        "  <img src=\"figures/inhomo_test_lin_plot_1000.svg\" width=\"1000\">\n",
         "</p>"
       ]
     },
@@ -226,15 +251,9 @@
       "metadata": {},
       "source": [
         "<p align=\"center\">\n",
-        "  <img src=\"../plots/inhomo_test_log_plot_1000.svg\" width=\"1000\">\n",
+        "  <img src=\"figures/inhomo_test_log_plot_1000.svg\" width=\"1000\">\n",
         "</p>"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "8e67fad8",
-      "metadata": {},
-      "source": []
     }
   ],
   "metadata": {
