Edited Notebook documentation file

--- a/docs/documentation.ipynb
+++ b/docs/documentation.ipynb
@@ -199,7 +199,7 @@
       "id": "b6adeb58",
       "metadata": {},
       "source": [
-        "### Inhomogeneous quench\n",
+        "## Inhomogeneous quench\n",
         "Dispersion relation for infinite 1D Ising model has the form:\n",
         "\n",
         "$$\\omega_k=2\\sqrt{(g-\\cos{k})^2+\\sin^2{k}}$$\n",
@@ -230,7 +230,7 @@
         "\n",
         "$$t/\\tau_Q \\rightarrow \\alpha\\left( vt/\\tau_{\\mathrm{total}}-n\\right), \\quad \\mathrm{where} \\quad \\tau_\\mathrm{total}=\\frac{\\pi}{\\alpha v} + \\frac{1}{v} \\frac{L-1}{2}$$\n",
         "\n",
-        "Below are the results for the system of $L=1000$ particles. As expected, the excitations are suppressed for inhomogeneous quenches with cricical front velocity smaller than the speed of sound $v<c=2$:"
+        "Below are the results for the system of $L=1000$ particles. As expected, the excitations are suppressed for inhomogeneous quenches with critical front velocity smaller than the speed of sound $v<c=2$:"
       ]
     },
     {
