--- a/docs/documentation.ipynb
+++ b/docs/documentation.ipynb
@@ -210,7 +210,7 @@
         "\n",
         "we see that there is a characteristic velocity in the system. We can think of it as a maximal group velocity at which information can propagate.\n",
         "\n",
-        "**Idea**: If a speed of ramp $g(t, n)$ moves slower than $c$, then those parts of the system that cross the critical point earlier may be able to communicate their choice of orientation of the order parameter to the parts that cross the transition later and bias them to make the same choice. Hence, smaller excitation density, and a better approximation of a final GS."
+        "**Idea**: If a ramp $g(t, n)$ propagates slower than $c$, then those parts of the system that cross the critical point earlier may be able to communicate their choice of orientation of the order parameter to the parts that cross the transition later and bias them to make the same choice. Hence, smaller excitation density, and a better approximation of a final GS."
       ]
     },
     {
