--- a/docs/documentation.ipynb
+++ b/docs/documentation.ipynb
@@ -143,6 +143,10 @@
         "## Kibble-Zurek Mechanism\n",
         "**Main idea**: Spontaneous symmetry breaking leads to the formation of topological defects.\n",
         "\n",
+        "<p align=\"center\">\n",
+        "  <img src=\"figures/Domain_Walls.png\" width=\"1000\">\n",
+        "</p>\n",
+        "\n",
         "In Ising model we have the following SSB pattern:\n",
         "$$\\mathbb{Z}_2 \\rightarrow \\mathbb{1}$$\n",
         "\n",
