--- a/docs/documentation.ipynb
+++ b/docs/documentation.ipynb
@@ -26,21 +26,21 @@
         "\n",
         "The model is in a **paramagnetic phase**, when $|g| \\gg 1$. In this case the ground state of the system has no degeneracy and it is a state in which all spins are pointing along $\\hat{x}$:\n",
         "\n",
-        "$$\\ket{GS}=\\ket{\\rightarrow\\rightarrow\\rightarrow\\cdots\\rightarrow\\rightarrow\\rightarrow}$$\n",
+        "$$\\ket{GS} = \\ket{\\rightarrow\\rightarrow\\rightarrow\\cdots\\rightarrow\\rightarrow\\rightarrow}$$\n",
         "\n",
         "On the other hand, the most excited state in this phase would be:\n",
         "\n",
-        "$$\\ket{\\leftarrow\\leftarrow\\leftarrow\\cdots\\leftarrow\\leftarrow\\leftarrow}$$\n",
+        "$$\\ket{\\psi_\\mathrm{excited}} = \\ket{\\leftarrow\\leftarrow\\leftarrow\\cdots\\leftarrow\\leftarrow\\leftarrow}$$\n",
         "\n",
         "**Ferromagnetic Phase**:\n",
         "\n",
-        "The model is in a **ferromagnetic phase**, when $|g| \\ll 1$. A ground state of the system has a two-fold degeneracy and it can be one of the following states (or their superposition):\n",
+        "The model is in a **ferromagnetic phase**, when $|g| \\ll 1$. A ground state of the system has a two-fold degeneracy and it has a form of a superposition of two sates:\n",
         "\n",
-        "$$\\ket{\\uparrow\\uparrow\\uparrow\\cdots\\uparrow\\uparrow\\uparrow}, \\quad \\ket{\\downarrow\\downarrow\\downarrow\\cdots\\downarrow\\downarrow\\downarrow}$$\n",
+        "$$\\ket{GS} = \\alpha \\ket{\\uparrow\\uparrow\\uparrow\\cdots\\uparrow\\uparrow\\uparrow} + \\beta \\ket{\\downarrow\\downarrow\\downarrow\\cdots\\downarrow\\downarrow\\downarrow}$$\n",
         "\n",
-        "The most excited state is spanned by:\n",
+        "The most excited state in feromagnetic phase is:\n",
         "\n",
-        "$$\\ket{\\uparrow\\downarrow\\uparrow\\cdots\\uparrow\\downarrow\\uparrow}, \\quad \\ket{\\downarrow\\uparrow\\downarrow\\cdots\\downarrow\\uparrow\\downarrow}$$\n",
+        "$$\\ket{\\psi_\\mathrm{excited}} = \\gamma \\ket{\\uparrow\\downarrow\\uparrow\\cdots\\uparrow\\downarrow\\uparrow} + \\rho \\ket{\\downarrow\\uparrow\\downarrow\\cdots\\downarrow\\uparrow\\downarrow}$$\n",
         "\n",
         "## Simulations\n",
         "\n",
@@ -57,7 +57,11 @@
       "metadata": {},
       "source": [
         "The Jordan-Wigner transformation is defined as:\n",
-        "$$\\sigma^x_n = 1 - 2 c^{\\dagger}_n c_n, \\quad \\sigma^z_n = -(c_n + c^{\\dagger}_n) \\prod_{m<n} (1 - 2 c^{\\dagger}_m c_m)$$\n",
+        "$$\\sigma^x_n = 1 - 2 c^{\\dagger}_n c_n, \\quad \\sigma^z_n = -(c_n + c^{\\dagger}_n) \\prod_{m<n} (1 - 2 c^{\\dagger}_m c_m),$$\n",
+        "\n",
+        "where $c_n$ are fermionic operators that obey canonical anti-commutation relations:\n",
+        "\n",
+        "$$\\left\\{ c^\\dagger_n, c_m \\right \\} = \\delta_{nm}, \\quad \\left\\{ c_n, c_m \\right \\} = \\left\\{ c^\\dagger_n, c^\\dagger_m \\right \\} = 0$$\n",
         "\n",
         "The hamiltonian becomes quadratic in J-W fermions:\n",
         "$$H = \\sum_{n=1}^{L} g_n \\left( 2 c^{\\dagger}_n c_n - 1 \\right) - 2 \\sum_{n=1}^{L-1} \\left(c^{\\dagger}_n c^{\\dagger}_{n+1} + c^{\\dagger}_n c_{n+1} + c^{\\dagger}_{n+1} c_{n} + c_{n+1} c_n \\right)$$\n",
@@ -68,8 +72,11 @@
         "via the Bogoliubov transformation\n",
         "$$c_n = \\sum_{m=1}^{L} ( u_{n,m} \\gamma_m + v_{n,m}^* \\gamma^{\\dagger}_m)$$\n",
         "\n",
-        "where $u^{\\pm}_{n,m} = \\left(u_{n,m} \\pm v_{n,m} \\right) / \\sqrt{2}$ are positive eigenmodes ($\\omega_m \\geq 0$) of the stationary Bogoliubov-de-Gennes (BdG) equations:\n",
-        "$$\\omega_m u^{\\pm}_{n,m} = 2 g_n u^{\\mp}_{n,m} - 2 u^{\\mp}_{n\\mp1, m}$$"
+        "where $m$ is enumerating the eigenmodes of stationary Bogoliubov-de-Gennes (BdG) equations:\n",
+        "\n",
+        "$$\\omega_m u^{\\pm}_{n,m} = 2 g_n u^{\\mp}_{n,m} - 2 u^{\\mp}_{n\\mp1, m}$$\n",
+        "\n",
+        "with $u^{\\pm}_{n,m} = \\left(u_{n,m} \\pm v_{n,m} \\right) / \\sqrt{2}$. Equation has $2L$ eigenmodes: $L$ positive eigenmodes with $\\omega_m \\geq 0$, and $L$ netative ones. It is enough to consider only the positive branch."
       ]
     },
     {
@@ -123,15 +130,25 @@
       "metadata": {},
       "source": [
         "Density of excitations can be found as an expectation value of the number of Bogoliubov quasiparticles in the final state:\n",
-        "$$p = \\frac{1}{N}\\sum_{m}\\bra{\\psi(t_f)}\\gamma^{\\dagger}_m\\gamma_m \\ket{\\psi(t_f)}$$\n",
+        "$$p = \\frac{1}{L}\\sum_{m}\\bra{\\psi(t_f)}\\gamma^{\\dagger}_m\\gamma_m \\ket{\\psi(t_f)}$$\n",
         "\n",
-        "where Bogoliubov quasiparticles are defined by the eigenmodes of stationary BdG eqs. at the final point:\n",
-        "$$\\gamma_m = \\sum_{n=1}^{N} ( u^*_{n,m} c_n + v^*_{n,m} c^{\\dagger}_n )$$\n",
-        "and fermionic operators are defined by evolved modes:\n",
-        "$$c_n = \\sum_{m=1}^{N} ( u_{n,m}(t_f) \\tilde{\\gamma}_m + v_{n,m}^*(t_f) \\tilde{\\gamma}^{\\dagger}_m )$$\n",
+        "where Bogoliubov quasiparticles are defined by the eigenmodes of stationary BdG eqs. $\\left\\{ u^{f}_{n,m}, v^{f}_{n,m} \\right\\}$ at the final point $g=1$:\n",
+        "$$\\gamma_m = \\sum_{n=1}^{L} ( u^{f\\,*}_{n,m} c_n + v^{f\\,*}_{n,m} c^{\\dagger}_n )$$\n",
+        "and $c_n$, $c^\\dagger_n$ are defined by the eigenmodes of stationary BdG eqs. at $g=2$, evolved by time-dependent BdG eq. from $g=2$ to the critical point $g=1$:\n",
+        "$$c_n = \\sum_{m=1}^{L} ( u_{n,m}(t_f) \\tilde{\\gamma}_m + v_{n,m}^*(t_f) \\tilde{\\gamma}^{\\dagger}_m )$$\n",
         "\n",
         "with a constraint that $\\tilde{\\gamma}_m \\ket{\\psi(t_f)}=0$\n",
         "\n",
+        "After calculations, we obtain the final formula for the density of excitations:\n",
+        "\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "p = \\frac{1}{L} \\mathrm{Tr} \\big(& U(t_f)^T V^f {V^f}^\\dagger U(t_f)^* \\\\\n",
+        "                                +\\ & U(t_f)^T V^f {U^f}^\\dagger V(t_f)^* \\\\\n",
+        "                                +\\ & V(t_f)^T U^f {V^f}^\\dagger U(t_f)^* \\\\\n",
+        "                                +\\ & V(t_f)^T U^f {U^f}^\\dagger V(t_f)^* \\big)\n",
+        "\\end{align}\n",
+        "$$\n",
         "This was a general idea on how to efficiently simulate dynamics of Ising model with transverse magnetic field."
       ]
     },
