--- a/docs/documentation.ipynb
+++ b/docs/documentation.ipynb
@@ -142,12 +142,12 @@
         "After calculations, we obtain the final formula for the density of excitations:\n",
         "\n",
         "$$\n",
-        "\\begin{align}\n",
+        "\\begin{align*}\n",
         "p = \\frac{1}{L} \\mathrm{Tr} \\big(& U(t_f)^T V^f {V^f}^\\dagger U(t_f)^* \\\\\n",
         "                                +\\ & U(t_f)^T V^f {U^f}^\\dagger V(t_f)^* \\\\\n",
         "                                +\\ & V(t_f)^T U^f {V^f}^\\dagger U(t_f)^* \\\\\n",
         "                                +\\ & V(t_f)^T U^f {U^f}^\\dagger V(t_f)^* \\big)\n",
-        "\\end{align}\n",
+        "\\end{align*}\n",
         "$$\n",
         "This was a general idea on how to efficiently simulate dynamics of Ising model with transverse magnetic field."
       ]
