--- a/docs/documentation.ipynb
+++ b/docs/documentation.ipynb
@@ -99,7 +99,7 @@
         "\n",
         "$$U(t) \\approx \\prod_{n=0}^{N-1} e^{-i \\hbar dt (H_1(ndt+dt/2) + H_2)}$$\n",
         "\n",
-        "As we will see, it is possible to analytically diagonalize both $H_1$ and $H_2$ separately, rather than their sum $H_1+H_2$. Therefore, it is advantageous to break this exponential operator into three parts using the third order Suzuki-Trotter decomposition:\n",
+        "As we will see, it is possible to analytically diagonalize both $H_1$ and $H_2$ separately, rather than their sum $H_1+H_2$. Therefore, it is advantageous to break this exponential operator into three parts using the second order Suzuki-Trotter decomposition:\n",
         "\n",
         "$$e^{-i \\hbar dt (H_1(ndt+dt/2) + H_2)} = e^{-i \\hbar \\frac{dt}{2} H_2} e^{-i \\hbar dt H_1(ndt+dt/2)} e^{-i \\hbar \\frac{dt}{2} H_2} + O(dt^3)$$"
       ]
